--- a/css/style.css
+++ b/css/style.css
@@ -1816,7 +1816,18 @@ body{
     .sea{
         width: 100%;
         bottom: 0px;
-        height: 150px;
+        /* height: 150px; */
+        animation: wave 6s linear infinite;
+    }
+
+    @keyframes wave {
+        0%{
+            height: 150px;
+        }50%{
+            height: 165px;
+        }100%{
+            height: 150px;
+        }
     }
 
     .main .topSection{
