--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,8 @@ body{
     top: 0;
     background-color: var(--TRANSPARENT_COLOR) ;
     z-index: 999;
-    -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     transition: 0.5s;
 }
 
@@ -897,6 +897,7 @@ animation-delay: 5s;
     width: 100%;
     height: 100%;
     backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -1048,6 +1049,10 @@ animation-delay: 5s;
     align-items: center;
 
     position: relative;
+}
+
+.endMsg{
+    display:none;
 }
 
 
@@ -1471,8 +1476,8 @@ body{
         width: 350px;
         flex-direction: column;
         background-color: var(--MENU_BG);
-        -webkit-backdrop-filter: blur(8px);
         backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
         position: absolute;
         align-items: flex-end;
         top: -20rem;
@@ -1622,7 +1627,7 @@ body{
         align-items: center;
         justify-content: center;
         margin-top: 20px;
-        padding-left: 40px;
+        padding-left: 15px;
     }
 
     .tech h3{
@@ -1739,20 +1744,31 @@ body{
         display: flex;
         flex-direction:column ;
         padding:0;
-        justify-content: start;
+        justify-content: center;
         gap: 2rem;
         transition: 1s;
         background-color: transparent;
     }
 
+
     .myProfiles{
+        padding-top: 20px;
         position: relative;
-        flex-direction: row;
-        width: 100%;
         height: 15vh;
         left:-600px;
         transition: 2s;
+        display: grid;
+        justify-content: space-around;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: center;
+        width: 100%;
+        place-items: center;
     }
+
+    .linkWrap{
+        background-color: white;
+    }
+
 
     .title{
         width: 100%;
@@ -1762,15 +1778,17 @@ body{
     }
 
     .titleWraper{
-        left: 80px;
-        width: 70%;
-        height: 22vh;
+        height: 200px;
+        padding: 20px;
+        left: 10%;
+        width: 80%;
+        gap: 12px;
+        background-color: transparent;
     }
 
     .titleWraper h1{
         display: none;
     }
-
 
 
 
@@ -1946,8 +1964,8 @@ body{
     }
 
     .titleWraper{
-        left: 14%;
-        height: 25vh;
+        height: 220px;
+        padding: 0px;
     }
 
 
@@ -2007,7 +2025,140 @@ body{
 }
 
 @media screen  and (max-width: 375px){
-    .container h1{
-        font-size: 1rem;
+    .navBar .logo{
+        font-size: 1.5em;
     }
+
+    .showMenuIcon{
+        width: 40px;
+    }
+
+    .container h1{
+        font-size: 0.8rem;
+    }
+
+    .container span{
+        font-size: small;
+    }
+
+    .linkBar{
+        width: 13em;
+    }
+
+    .tech .skillSet .skillList{
+        padding-left:10px;
+    }
+
+    .myResume{
+        left: 70%;
+    }
+
+
+    @keyframes zoom{
+        0%{
+            width: 50px;
+            height: 50px;
+        }50%{
+            width: 55px;
+            height: 55px;
+        }100%{
+            width: 50px;
+            height: 50px;
+        }
+    }
+    
+    .profiles{
+        padding-top: 0vh;
+    }
+
+
+
+    .titleWraper{
+        left: 10%;
+        background-color: transparent;
+        height: 30vh;
+        width: 80vw;
+    }
+
+
+    .projectContainer{
+        flex-direction: column;
+
+    }
+
+    .project .mask .projectHeading h1{
+        width: 100px;
+    }
+
+    .projectContainer .titles{
+        width: 100%;
+        height: 100px;
+        flex-direction: row;
+    }
+
+    .projectContainer .titles hr{
+        display: none;
+    }
+
+    .projectContainer .details{
+        width:100%;
+        height: 80%;
+        gap: 20px;
+        justify-content: space-around;
+    }
+
+
+    .projectContainer .details .discription{
+        padding: 0px 20px;
+        height: 70%;
+        gap: 6px;
+    }
+
+    .discription .projectContent{
+        font-size: 0.6em;
+    }
+
+    .projectContainer .details .techStack{
+        height: 30%;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+
+
+    .endBanner{
+        height: 10vh;
+    }
+
+    .footer{
+        height: 40vh;
+    }
+
+    .endBanner p{
+        display: none;
+        font-size: 0.7em;
+
+    }
+
+    .endMsg{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 6px;
+    }
+    .design{
+        font-size: 0.7em;
+        width: 100%;
+        color: white;
+        opacity:0.7;
+    }
+
+    .name{
+        font-size: 0.7em;
+        color: #1193AB;
+    }
+
+
+    
 }
